Fix about overflowing following list

--- a/packages/nostter/components/ProfileListItem.module.css
+++ b/packages/nostter/components/ProfileListItem.module.css
@@ -49,3 +49,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
+.about {
+	word-break: break-word;
+}
